[gd_scene load_steps=17 format=3 uid="uid://bjgtvtynklld5"]

[ext_resource type="Script" uid="uid://dqex76kdn8q6e" path="res://scripts/book.gd" id="1_e1apg"]
[ext_resource type="Texture2D" uid="uid://b6fdl88ll2tey" path="res://ressources/livre_ouvert.png" id="1_hv8lg"]
[ext_resource type="Texture2D" uid="uid://c5dg2phck5mvd" path="res://ressources/sprite_1.png" id="2_e1apg"]
[ext_resource type="Texture2D" uid="uid://pfaspl1fclcm" path="res://ressources/sprite_2.png" id="3_qbo12"]
[ext_resource type="Texture2D" uid="uid://dl3muurh6w743" path="res://ressources/sprite_3.png" id="4_6gi13"]
[ext_resource type="Texture2D" uid="uid://bs74fno8jtdrf" path="res://ressources/sprite_4.png" id="5_bfcd2"]
[ext_resource type="Texture2D" uid="uid://51u36hbobkq0" path="res://ressources/sprite_5.png" id="6_fx0ut"]
[ext_resource type="Texture2D" uid="uid://cb75mo07j5hl4" path="res://ressources/sprite_6.png" id="7_f6vt1"]
[ext_resource type="Texture2D" uid="uid://ylh6fpccv4qf" path="res://ressources/sprite_7.png" id="8_p1lk8"]
[ext_resource type="Texture2D" uid="uid://dacg73wq786q5" path="res://ressources/retour1.png" id="10_p1lk8"]
[ext_resource type="Texture2D" uid="uid://bdp6hre2uk2w" path="res://ressources/retour2.png" id="11_7iv8e"]
[ext_resource type="Texture2D" uid="uid://b5c6ak4ik724q" path="res://ressources/suivant1.png" id="12_qp1ud"]
[ext_resource type="Texture2D" uid="uid://db0hlw4yugak0" path="res://ressources/suivant2.png" id="13_u6yg1"]
[ext_resource type="Texture2D" uid="uid://byxqtqn4i2wqk" path="res://ressources/precedent1.png" id="14_hp3is"]
[ext_resource type="Texture2D" uid="uid://bawhx1snecap" path="res://ressources/precedent2.png" id="15_7k10a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7iv8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hv8lg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_f6vt1")
}, {
"duration": 0.5,
"texture": ExtResource("6_fx0ut")
}, {
"duration": 0.3,
"texture": ExtResource("5_bfcd2")
}, {
"duration": 0.4,
"texture": ExtResource("4_6gi13")
}, {
"duration": 0.5,
"texture": ExtResource("3_qbo12")
}, {
"duration": 1.0,
"texture": ExtResource("2_e1apg")
}, {
"duration": 1.0,
"texture": ExtResource("8_p1lk8")
}],
"loop": false,
"name": &"turn_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e1apg")
}, {
"duration": 0.5,
"texture": ExtResource("3_qbo12")
}, {
"duration": 0.4,
"texture": ExtResource("4_6gi13")
}, {
"duration": 0.3,
"texture": ExtResource("5_bfcd2")
}, {
"duration": 0.5,
"texture": ExtResource("6_fx0ut")
}, {
"duration": 1.0,
"texture": ExtResource("7_f6vt1")
}, {
"duration": 1.0,
"texture": ExtResource("8_p1lk8")
}],
"loop": false,
"name": &"turn_right",
"speed": 8.0
}]

[node name="Book" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1apg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.15686275)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(585, 272)
scale = Vector2(2.9277344, 2.9277344)
sprite_frames = SubResource("SpriteFrames_7iv8e")
animation = &"turn_left"

[node name="retour" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.76600003
anchor_top = 0.81000006
anchor_right = 0.989
anchor_bottom = 0.91400003
offset_left = 0.56799316
offset_top = 0.11993408
offset_right = -0.32800293
offset_bottom = -0.2720337
texture_normal = ExtResource("10_p1lk8")
texture_hover = ExtResource("11_7iv8e")

[node name="suivant" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53800005
anchor_top = 0.73200005
anchor_right = 0.72700006
anchor_bottom = 0.84300005
offset_left = -38.776062
offset_top = 33.66391
offset_right = -0.50408936
offset_bottom = 28.7359
rotation = -0.2617994
texture_normal = ExtResource("12_qp1ud")
texture_hover = ExtResource("13_u6yg1")

[node name="pred" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37100002
anchor_top = 0.725
anchor_right = 0.531
anchor_bottom = 0.878
offset_left = -14.39209
offset_top = -22.800018
offset_right = 57.287903
offset_bottom = -54.94403
rotation = 0.2617994
texture_normal = ExtResource("14_hp3is")
texture_hover = ExtResource("15_7k10a")

[connection signal="pressed" from="retour" to="." method="_on_button_pressed"]
[connection signal="pressed" from="suivant" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="pred" to="." method="_on_button_3_pressed"]
